@@ -1,3 +1,6 @@
+2009-07-04
+	* Remove newline with comment only lines in TEXT
+
 2009-07-01
 	* Fix escaping of comments in TEXT (sf.net #2813390, thanks Nils)
 
